@@ -1,8 +1,8 @@
 Package: ODB
 Type: Package
 Title: Open Document Databases (.odb) Management
-Version: 1.2.0
-Date: 2018-05-27
+Version: 1.2.1
+Date: 2020-03-10
 Author: Sylvain Mareschal
 Maintainer: Sylvain Mareschal <maressyl@gmail.com>
 URL: http://bioinformatics.ovsa.fr/ODB
